style fix, category fix and php stuff
fixed it so that the articles aren’t aligned wrong. Instead of hiding
the page title with css, I did it in the php file.

Fixed the category section to work almost as we want.

--- a/style.css
+++ b/style.css
@@ -28,8 +28,9 @@ li{
 	padding-top: 4px;
 }
 
-body.archive.category h1.page-title{
-    display: none;
+h1.entry-title a{
+    /*Making the post entry title look like a normal page title, even if it's a link.*/
+    color:black;
 }
 
 .site-branding{
